[gd_scene load_steps=13 format=3 uid="uid://c1hjc115hog7o"]

[ext_resource type="Script" path="res://avatar.gd" id="1_3mxvh"]
[ext_resource type="Texture2D" uid="uid://hj5i76e4t604" path="res://art/playerGrey_up1.png" id="1_s35we"]
[ext_resource type="Texture2D" uid="uid://44sqcmv0b6pk" path="res://art/playerGrey_up2.png" id="2_fyl51"]
[ext_resource type="Texture2D" uid="uid://bk2mb2ygud5xk" path="res://art/Graze Vac Busier 1.png" id="4_yn22l"]
[ext_resource type="Texture2D" uid="uid://c4roio51qcmhk" path="res://art/Graze Vac Busier 2.png" id="5_bekil"]
[ext_resource type="Texture2D" uid="uid://xofk5vwgafjp" path="res://art/Graze Vac Busier 3.png" id="6_gexuq"]
[ext_resource type="AudioStream" uid="uid://dyfw6tf54bbqg" path="res://sounds/coconut_ow.ogg" id="8_7cyc8"]
[ext_resource type="AudioStream" uid="uid://bjhej07tb7yye" path="res://sounds/short chrip.ogg" id="8_mjx8t"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8lx66"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_s35we")
}, {
"duration": 1.0,
"texture": ExtResource("2_fyl51")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_a7m52"]

[sub_resource type="CircleShape2D" id="CircleShape2D_06a1p"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1uure"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_yn22l")
}, {
"duration": 1.0,
"texture": ExtResource("5_bekil")
}, {
"duration": 1.0,
"texture": ExtResource("6_gexuq")
}],
"loop": true,
"name": &"NiceLilFlash",
"speed": 8.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Avatar" type="CharacterBody2D" groups=["avatar"]]
z_index = 1
z_as_relative = false
script = ExtResource("1_3mxvh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 10)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_8lx66")
frame_progress = 0.288541

[node name="Area2D" type="Area2D" parent="." groups=["avatar"]]
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(2.5, 2.5)
shape = SubResource("CircleShape2D_a7m52")

[node name="InvulnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FlashingTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="GrazeArea2D" type="Area2D" parent="."]
z_index = -1
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrazeArea2D"]
scale = Vector2(6, 6)
shape = SubResource("CircleShape2D_06a1p")
debug_color = Color(0.786325, 0.316315, 0.746796, 0.42)

[node name="GrazeRingAnimatedSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_1uure")
animation = &"NiceLilFlash"
frame = 2
frame_progress = 0.689034

[node name="GrazeTimer" type="Timer" parent="."]
wait_time = 0.12
autostart = true

[node name="OuchNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_7cyc8")

[node name="GrazeNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_mjx8t")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="InvulnTimer" to="." method="_on_invuln_timer_timeout"]
[connection signal="timeout" from="FlashingTimer" to="." method="_on_flashing_timer_timeout"]
[connection signal="body_entered" from="GrazeArea2D" to="." method="_on_graze_area_2d_body_entered"]
[connection signal="body_exited" from="GrazeArea2D" to="." method="_on_graze_area_2d_body_exited"]
[connection signal="timeout" from="GrazeTimer" to="." method="_on_graze_timer_timeout"]
